@@ -1,22 +1,30 @@
 package ch.epfl.chacun;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 
 /**
  * Represents the state of the game
+ *
  * @param players
  * @param tileDecks
  * @param tileToPlace
  * @param board
  * @param nextAction
  * @param messageBoard
- *
  * @author Laura Paraboschi (364161)
  * @author Emmanuel Omont (372632)
  */
-public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile tileToPlace, Board board, Action nextAction, MessageBoard messageBoard) {
+public record GameState(
+        List<PlayerColor> players,
+        TileDecks tileDecks,
+        Tile tileToPlace,
+        Board board,
+        Action nextAction,
+        MessageBoard messageBoard
+) {
 
     /**
      * Represents the different actions that can be done in the game
@@ -38,13 +46,15 @@ public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile til
      * @param board        the board
      * @param nextAction   the next action
      * @param messageBoard the message board
-     * @throws NullPointerException if the players, the tile decks, the board, the next action or the message board are null
-     * @throws IllegalArgumentException if the players list is empty
+     * @throws NullPointerException     if the players, the tile decks, the board, the next action
+     *                                  or the message board are null
+     * @throws IllegalArgumentException if there is less than 2 players or if the next action is PLACE_TILE
+     *                                  and the tile to place is null
      */
     public GameState {
-        Preconditions.checkArgument(players.size() > 1);
-        //use of a linkedList because we are going to remove the first player and add him at the end of the list
-        players = new LinkedList<>(players);
+        players = List.copyOf(players);
+        Preconditions.checkArgument(players.size() >= 2);
+        Preconditions.checkArgument(tileToPlace == null || nextAction == Action.PLACE_TILE);
         requireNonNull(tileDecks);
         requireNonNull(board);
         requireNonNull(nextAction);
@@ -52,12 +62,16 @@ public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile til
     }
 
     /**
-     * Returns the GameState with the starting tile placed
+     * Returns the initial GameState with the given players and tile decks, an empty board,
+     * the next action being START_GAME, and an empty message board
      *
-     * @return the GameState with the starting tile placed
+     * @return the initial GameState with the given players and tile decks, and an empty board,
+     * the next action being START_GAME, and an empty message board
      */
     public static GameState initial(List<PlayerColor> players, TileDecks tileDecks, TextMaker textMaker) {
-        return new GameState(players, tileDecks, null, Board.EMPTY, Action.START_GAME, new MessageBoard(textMaker, List.of()));
+        return new GameState(players, tileDecks, null, Board.EMPTY, Action.START_GAME,
+                new MessageBoard(textMaker, List.of())
+        );
     }
 
     /**
@@ -66,14 +80,19 @@ public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile til
      * @return the player whose turn it is
      */
     public PlayerColor currentPlayer() {
-        return players.get(0);
+        if (nextAction == Action.START_GAME || nextAction == Action.END_GAME) {
+            return null;
+        } else {
+            return players.getFirst();
+        }
     }
+
     /**
-     * Returns the number of free occupants of the given kind and color
+     * Returns the number of free occupants pf the given player of the given kind
      *
      * @param player the color of the player
      * @param kind   the kind of the occupant
-     * @return the number of free occupants of the given kind and color
+     * @return the number of free occupants of the given player of the given kind
      */
     public int freeOccupantsCount(PlayerColor player, Occupant.Kind kind) {
         return Occupant.occupantsCount(kind) - board.occupantCount(player, kind);
@@ -86,79 +105,113 @@ public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile til
      * @throws IllegalArgumentException if the board is empty
      */
     public Set<Occupant> lastTilePotentialOccupants() {
-        Preconditions.checkArgument(board.equals(Board.EMPTY));
-        return board.lastPlacedTile().potentialOccupants();
+        PlacedTile lastPlacedTile = board.lastPlacedTile();
+        Preconditions.checkArgument(lastPlacedTile != null);
+
+        Set<Occupant> potentialOccupants = new HashSet<>(lastPlacedTile.potentialOccupants());
+        potentialOccupants.removeIf(occupant -> {
+            Zone zone = lastPlacedTile.zoneWithId(occupant.zoneId());
+            return switch (zone) {
+                case Zone.Forest forest -> board.forestArea(forest).isOccupied();
+                case Zone.Meadow meadow -> board.meadowArea(meadow).isOccupied();
+                case Zone.River river when occupant.kind() == Occupant.Kind.PAWN -> board.riverArea(river).isOccupied();
+                case Zone.Water water -> board.riverSystemArea(water).isOccupied();
+            };
+        });
+        potentialOccupants.removeIf(occupant ->
+                freeOccupantsCount(currentPlayer(), occupant.kind()) == 0
+        );
+
+        return potentialOccupants;
     }
 
     /**
      * Returns the GameState with the starting tile placed
      *
      * @return the GameState with the starting tile placed
+     * @throws IllegalArgumentException if the next action is not START_GAME
      */
     public GameState withStartingTilePlaced() {
+        Preconditions.checkArgument(nextAction == Action.START_GAME);
         return new GameState(
                 players,
-                tileDecks.withTopTileDrawn(Tile.Kind.START),
-                //there is no problem, as all the tiles can be placed around the starting tile
+                tileDecks.withTopTileDrawn(Tile.Kind.START).withTopTileDrawn(Tile.Kind.NORMAL),
                 tileDecks.topTile(Tile.Kind.NORMAL),
-                //temporary solution for the start tile...
-                board.withNewTile(new PlacedTile(tileDecks.topTile(Tile.Kind.START), null, Rotation.NONE, new Pos(0, 0))),
+                board.withNewTile(new PlacedTile(
+                        tileDecks.topTile(Tile.Kind.START)
+                        , null
+                        , Rotation.NONE
+                        , new Pos(0, 0))
+                ),
                 Action.PLACE_TILE,
                 messageBoard
         );
     }
 
-    public GameState withPlacedTile(PlacedTile placedTile) {
-
-        //VAUT MIEUX S'OCCUPER DANS LA METHODE PRIVEE DE LA FIN DE GAME JUSTE
-
-
-
-        //TO DO LAURA
-        //(je crois qu'elle est bien fat celle là, genre c la pire de toutes)
-
-        //JE VAIS ESSAYER DE FAIRE DES COMMENTAIRES POUR ECLAICIR LE TRUC
-
-        //D'abord, ajouter la tuile au plateau
-
-        //Ensuite, on vérifie les différentes zones qui se sont fermées
-        //avec des vieux if else dégueulasse mais pas trop le choix
-
-        //si une forêt est fermée :
-        // - vérifier si elle a pas de menhir, si oui la prochaine action est de placer une tuile
-        // - vérifier si c'était pas une tuile avec un pouvoir spécial, auquel cas faut gérer
-
-        // - vérifier les différentes zones fermées, et agir en fonction, notamment
-        // -en affichant un message
-        // - en restituant les pions aux joueurs concernés
-
-        // - Ensuite, vérifier si c'est la fin du tour
-
-        // - Enfin, on retourne le nouveau GameState
-
-        // Tout est plus ou moins bien expliqué dans la partie 4 des conseils de programmation.
-
-        //Ah aussi faut vérifier que la prochaine tuile est jouable LOL.
-        return null;
-    }
-
     /**
-     * Returns the GameState with the given occupant removed
+     * Returns the GameState with the given tile placed, points for immediate scoring added, and the next action to do
      *
-     * @param occupant the occupant to remove
-     * @return the GameState with the given occupant removed
+     * @param placedTile the tile to place
+     * @return the GameState with the given tile placed, points for immediate scoring added, and the next action to do
+     * @throws IllegalArgumentException if the next action is not PLACE_TILE or if the tile is already occupied
      */
-    public GameState withOccupantRemoved(Occupant occupant) {
-        Preconditions.checkArgument(nextAction == Action.RETAKE_PAWN);
-        Preconditions.checkArgument(occupant == null || occupant.kind().equals(Occupant.Kind.PAWN));
-        if(occupant == null) return this;
+    public GameState withPlacedTile(PlacedTile placedTile) {
+        Preconditions.checkArgument(nextAction == Action.PLACE_TILE && placedTile.occupant() == null);
 
-        //we go directly to the occupy tile action, and inside we will check if the turn is finished because there is nothing to do
+        Board newBoard = board.withNewTile(placedTile);
+        MessageBoard newMessageBoard = messageBoard;
+
+        Zone specialPowerZone = placedTile.specialPowerZone();
+        Zone.SpecialPower specialPower = null;
+        if (specialPowerZone != null)
+            specialPower = specialPowerZone.specialPower();
+
+        if (specialPower == Zone.SpecialPower.SHAMAN) {
+            return new GameState(
+                    players,
+                    tileDecks,
+                    tileToPlace,
+                    newBoard,
+                    Action.RETAKE_PAWN,
+                    messageBoard
+            ).withTurnFinishedIfRemovalImpossible();
+        } else if (specialPower == Zone.SpecialPower.LOGBOAT) {
+            newMessageBoard = messageBoard.withScoredLogboat(currentPlayer(),
+                    board.riverSystemArea((Zone.Water) specialPowerZone));
+        } else if (specialPower == Zone.SpecialPower.HUNTING_TRAP) {
+            Area<Zone.Meadow> adjacentMeadow = board.adjacentMeadow(placedTile.pos(), (Zone.Meadow) specialPowerZone);
+            //A ajouter au prochain rendu
+            Set<Animal> deersToCancel = getSimpleCancelledDeers(adjacentMeadow);
+            newMessageBoard = messageBoard.withScoredHuntingTrap(currentPlayer(), adjacentMeadow);
+            newBoard = newBoard.withMoreCancelledAnimals(Area.animals(adjacentMeadow, Set.of()));
+        }
+
         return new GameState(
                 players,
                 tileDecks,
                 tileToPlace,
-                board.withoutOccupant(occupant),
+                newBoard,
+                Action.OCCUPY_TILE,
+                newMessageBoard
+        ).withTurnFinishedIfOccupationImpossible();
+    }
+
+    /**
+     * Returns the GameState with the given occupant removed if the occupant isn't null
+     *
+     * @param occupant the occupant to remove
+     * @return the GameState with the given occupant removed if the occupant isn't null
+     */
+    public GameState withOccupantRemoved(Occupant occupant) {
+        Preconditions.checkArgument(nextAction == Action.RETAKE_PAWN
+                && (occupant == null || occupant.kind() == Occupant.Kind.PAWN)
+        );
+
+        return new GameState(
+                players,
+                tileDecks,
+                tileToPlace,
+                occupant == null ? board : board.withoutOccupant(occupant),
                 Action.OCCUPY_TILE,
                 messageBoard
         ).withTurnFinishedIfOccupationImpossible();
@@ -172,33 +225,191 @@ public record GameState(List<PlayerColor> players, TileDecks tileDecks, Tile til
      */
     public GameState withNewOccupant(Occupant occupant) {
         Preconditions.checkArgument(nextAction == Action.OCCUPY_TILE);
-        if(occupant == null) return this;
+
         return new GameState(
                 players,
                 tileDecks,
                 tileToPlace,
-                board.withOccupant(occupant),
+                occupant == null ? board : board.withOccupant(occupant),
                 Action.OCCUPY_TILE,
                 messageBoard
-        ).withTurnFinishedIfOccupationImpossible();
+        ).withTurnFinished();
     }
 
     /**
      * Check if the occupation is possible, and if not finish the turn
      *
-     * @return the GameState with the turn finished
+     * @return the GameState with the turn finished or the next action being OCCUPY_TILE
      */
     private GameState withTurnFinishedIfOccupationImpossible() {
-        //ça dépend de comment tu choisis d'implémenter PlaceTile, mais je pense que
-
-        //no possibility of placing any occupant
-        if(board.lastPlacedTile().potentialOccupants().isEmpty()) return this.withTurnFinished();
-        if(freeOccupantsCount(currentPlayer(), Occupant.Kind.PAWN) == 0 && freeOccupantsCount(currentPlayer(), Occupant.Kind.HUT) == 0) return this.withTurnFinished();
-
-        return this;
+        return lastTilePotentialOccupants().isEmpty() ? this.withTurnFinished() : this;
     }
 
+    /**
+     * Check if the removal is possible, and if not finish the turn
+     *
+     * @return the GameState with the turn finished or the next action being RETAKE_PAWN
+     */
+    private GameState withTurnFinishedIfRemovalImpossible() {
+        return board.occupantCount(currentPlayer(), Occupant.Kind.PAWN) > 0 ? this : this.withTurnFinished();
+    }
+
+    /**
+     * Returns the GameState with the turn finished
+     *
+     * @return the GameState with the turn finished
+     */
     private GameState withTurnFinished() {
-        return null;
+        MessageBoard newMessageBoard = messageBoard;
+
+        for (Area<Zone.River> river : board.riversClosedByLastTile()) {
+            newMessageBoard = newMessageBoard.withScoredRiver(river);
+        }
+        Set<Zone.Forest> zonesForestsClosed = new HashSet<>();
+        for (Area<Zone.Forest> forest : board.forestsClosedByLastTile()) {
+            newMessageBoard = newMessageBoard.withScoredForest(forest);
+            zonesForestsClosed.addAll(forest.zones());
+        }
+        Set<Zone.Forest> forestWithMenhir = zonesForestsClosed.stream()
+                .filter(forest -> forest.kind() == Zone.Forest.Kind.WITH_MENHIR)
+                .collect(Collectors.toSet());
+        for (Zone.Forest forest : forestWithMenhir) {
+            newMessageBoard = newMessageBoard.withClosedForestWithMenhir(currentPlayer(), board.forestArea(forest));
+        }
+
+        boolean playerCanPlaySecondTurn = !forestWithMenhir.isEmpty()
+                && board.lastPlacedTile().tile().kind() == Tile.Kind.NORMAL;
+
+        TileDecks newTileDecks = tileDecks.withTopTileDrawnUntil(
+                playerCanPlaySecondTurn ? Tile.Kind.MENHIR : Tile.Kind.NORMAL,
+                board::couldPlaceTile
+        );
+        if (playerCanPlaySecondTurn && newTileDecks.menhirTiles().isEmpty()) {
+            newTileDecks = newTileDecks.withTopTileDrawnUntil(Tile.Kind.NORMAL, board::couldPlaceTile);
+            playerCanPlaySecondTurn = false;
+        }
+
+        List<PlayerColor> newPlayers = new LinkedList<>(players);
+        Tile tileToPlay;
+        if (playerCanPlaySecondTurn) {
+            tileToPlay = newTileDecks.topTile(Tile.Kind.MENHIR);
+            newTileDecks = newTileDecks.withTopTileDrawn(Tile.Kind.MENHIR);
+        } else {
+            tileToPlay = newTileDecks.topTile(Tile.Kind.NORMAL);
+            if (tileToPlay == null)
+                return new GameState(
+                        newPlayers,
+                        newTileDecks,
+                        tileToPlay,
+                        board,
+                        Action.END_GAME,
+                        newMessageBoard
+                ).withFinalPointsCounted();
+            newTileDecks = newTileDecks.withTopTileDrawn(Tile.Kind.NORMAL);
+            newPlayers.add(newPlayers.removeFirst());
+        }
+
+        return new GameState(
+                newPlayers,
+                newTileDecks,
+                tileToPlay,
+                board,
+                Action.PLACE_TILE,
+                newMessageBoard
+        );
+    }
+
+    /**
+     * Returns the GameState with the final points counted and messages added
+     *
+     * @return the GameState with the final points counted and messages added
+     */
+    private GameState withFinalPointsCounted() {
+        Board newBoard = board;
+        MessageBoard newMessageBoard = messageBoard;
+
+        for (Area<Zone.Meadow> meadowArea : board.meadowAreas()) {
+            Zone.Meadow zoneWithPitTrap = (Zone.Meadow) meadowArea.zoneWithSpecialPower(Zone.SpecialPower.PIT_TRAP);
+            Set<Animal> cancelledAnimals = zoneWithPitTrap == null ?
+                    getSimpleCancelledDeers(meadowArea) : getFurthestCancelledDeers(zoneWithPitTrap);
+            newBoard = newBoard.withMoreCancelledAnimals(cancelledAnimals);
+            newMessageBoard = newMessageBoard.withScoredMeadow(meadowArea, cancelledAnimals);
+            if (zoneWithPitTrap != null) {
+                newMessageBoard = newMessageBoard.withScoredPitTrap(newBoard.adjacentMeadow(
+                        newBoard.tileWithId(zoneWithPitTrap.tileId()).pos(), zoneWithPitTrap), newBoard.cancelledAnimals());
+            }
+        }
+
+        for (Area<Zone.Water> riverSystemArea : board.riverSystemAreas()) {
+            Zone.Water zoneWithRaft = (Zone.Water) riverSystemArea.zoneWithSpecialPower(Zone.SpecialPower.RAFT);
+            newMessageBoard = newMessageBoard.withScoredRiverSystem(riverSystemArea);
+            if (zoneWithRaft != null) {
+                newMessageBoard = newMessageBoard.withScoredRaft(riverSystemArea);
+            }
+        }
+
+        int maxPoints = newMessageBoard.points().values().stream().max(Integer::compare).orElseThrow();
+        Set<PlayerColor> winners = newMessageBoard.points().entrySet().stream()
+                .filter(entry -> entry.getValue() == maxPoints)
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet());
+        newMessageBoard = newMessageBoard.withWinners(winners, maxPoints);
+
+        return new GameState(
+                players,
+                tileDecks,
+                tileToPlace,
+                newBoard,
+                Action.END_GAME,
+                newMessageBoard
+        );
+    }
+
+    /**
+     * Returns the set of the deers to cancel in the given area without taking into account the distance of the deers
+     *
+     * @param meadowArea the meadow area to check
+     * @return the set of the deers to cancel in the given area without taking into account the distance of the deers
+     */
+    private Set<Animal> getSimpleCancelledDeers(Area<Zone.Meadow> meadowArea) {
+        boolean isThereFire = meadowArea.zoneWithSpecialPower(Zone.SpecialPower.WILD_FIRE) != null;
+        int numberOfSmilodons = isThereFire ? 0 : (int) Area.animals(meadowArea, Set.of()).stream().filter(
+                animal -> animal.kind() == Animal.Kind.TIGER).count();
+
+        return Area.animals(meadowArea, Set.of()).stream().filter(
+                animal -> animal.kind() == Animal.Kind.DEER).limit(numberOfSmilodons).collect(Collectors.toSet());
+    }
+
+    /**
+     * Returns the set of the furthest deers from the given meadow to cancel in the meadow area
+     *
+     * @param pitTrapMeadow the pit trap meadow
+     * @return the set of the furthest deers from the given meadow to cancel in the meadow area
+     */
+    private Set<Animal> getFurthestCancelledDeers(Zone.Meadow pitTrapMeadow) {
+        Set<Animal> furthestCancelledDeers = new HashSet<>();
+        Area<Zone.Meadow> meadowArea = board.meadowArea(pitTrapMeadow);
+        Pos posOfCentralMeadow = board.tileWithId(pitTrapMeadow.tileId()).pos();
+        Area<Zone.Meadow> adjacentMeadowArea = board.adjacentMeadow(posOfCentralMeadow, pitTrapMeadow);
+        boolean isThereFire = meadowArea.zoneWithSpecialPower(Zone.SpecialPower.WILD_FIRE) != null;
+        int numberOfSmilodons = isThereFire ? 0 : (int) Area.animals(meadowArea, Set.of()).stream().filter(
+                animal -> animal.kind() == Animal.Kind.TIGER).count();
+        Set<Animal> deersInAdjacentArea = Area.animals(adjacentMeadowArea, Set.of()).stream().filter(
+                animal -> animal.kind() == Animal.Kind.DEER).collect(Collectors.toSet());
+        Set<Animal> deersOutsideAdjacentArea = Area.animals(meadowArea, deersInAdjacentArea).stream().filter(
+                animal -> animal.kind() == Animal.Kind.DEER).collect(Collectors.toSet());
+
+        if (numberOfSmilodons > 0) {
+            if (numberOfSmilodons <= deersOutsideAdjacentArea.size()) {
+                furthestCancelledDeers.addAll(deersOutsideAdjacentArea.stream()
+                        .limit(numberOfSmilodons).collect(Collectors.toSet()));
+            } else {
+                furthestCancelledDeers.addAll(deersOutsideAdjacentArea);
+                furthestCancelledDeers.addAll(deersInAdjacentArea.stream()
+                        .limit(numberOfSmilodons - deersOutsideAdjacentArea.size()).collect(Collectors.toSet()));
+            }
+        }
+
+        return furthestCancelledDeers;
     }
 }
